# walking-lanczos

./: .clang-format  .gitmodules  5x5.hamiltonian  5x5.in  CMakeLists.txt  Kagome-12.in  LICENSE
include/: config.hpp  diffusion.hpp  format.hpp  hamiltonian.hpp  parser_utils.hpp  quantum_state.hpp  random.hpp  random_sample.hpp  spin_chain.hpp
src/: CMakeLists.txt  diffusion.cpp  hamiltonian.cpp  main.cpp  quantum_state.cpp  random.cpp  random_sample.cpp  spin_chain.cpp
test/: CMakeLists.txt  spin_vector_test.cpp
